# codiff

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  codiff_diff_preview.html  codiff_diff_uml.html  mermaid.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
codiff/: __init__.py  __main__.py  cli.py  config.py  db.py  incremental.py  mcp_server.py  setup.py  watcher.py
codiff/code_parsing/: __init__.py  call_resolver.py  code_parser.py  data_classes.py  python_parser.py
codiff/code_parsing/parsers/: language_parser.py  python_parser.py
codiff/db/: __init__.py  engine.py  models.py  operations.py
codiff/diff/: __init__.py  analysis.py  differ.py  engine.py  indexer.py  json_output.py  render.py  snapshot.py
codiff/export/: __init__.py  mermaid.py  terminal.py
codiff/languages/: __init__.py  code_parser.py  language_parser.py  parser.py  repository.py  resolver.py
codiff/languages/python/: parser.py  resolver.py
codiff/languages/typescript/: parser.py  resolver.py
codiff/parsers/: __init__.py  code_parser.py  language_parser.py  python_parser.py  typescript_parser.py
codiff/resolvers/: __init__.py  call_resolver.py  typescript_resolver.py
codiff/schema/: __init__.py  diff.py  parsing.py
codiff/utils/: args.py  files.py  git.py  gitignore_utils.py  instructions.py  instructions.yaml  terminal.py
tests/: conftest.py  test_call_patterns.py  test_call_resolver.py  test_cli.py  test_code_parser.py  test_config.py  test_db.py  test_diff.py  test_export_json.py  test_export_mermaid.py  test_export_terminal.py  test_indexer.py  test_setup.py  test_snapshot.py  test_ts_integration.py  test_ts_parser.py  test_ts_resolver.py  test_utils.py
