[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codiff"
version = "0.1.0"
description = "Structural call-graph diff for Python codebases"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.25",
    "networkx>=3.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.5.2",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "httpx>=0.27.1",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "sqlalchemy[mypy]>=2.0.25",
]

[project.scripts]
codiff = "codiff.cli:main"
codiff-mcp = "codiff.mcp_server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
