[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codiff"
version = "0.1.0"
description = "Structural call-graph diff for codebases, built for coding agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Issa Hammoud", email = "issa.hammoud@outlook.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=2.0.25",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
    "pathspec>=0.12.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/issahammoud/codiff"
Repository = "https://github.com/issahammoud/codiff"
"Bug Tracker" = "https://github.com/issahammoud/codiff/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "sqlalchemy[mypy]>=2.0.25",
]

[project.scripts]
codiff = "codiff.cli:main"
codiff-mcp = "codiff.mcp_server:main"

[tool.setuptools.package-data]
"codiff.utils" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
